@@ -281,4 +281,11 @@ ignore_king_ability_for_defense_priority = false
 ; Untradable techs will appear grayed out on the trade screen. This lets you see which untradable techs the AI has just like for tradable ones.
 show_untradable_techs_on_trade_screen = false
 
+; Barbarians will capture cities instead of ransacking them. This option also modifies the game's production logic so barbarian cities can build
+; things, grow, and even do research.
+; This feature is EXPERIMENTAL at the moment. It basically works but hasn't been extensively tested. For example, I don't know what would happen if
+; the barb player were to win the game.
+; Because of how barb city production works under the hood, it requires barb activity to be turned on in order to work. The mod will handle this
+; automatically. If this option is enabled, there is at least one barb city on the map, and the barb activity level is set to 0 (no barbarians), the
+; level will be increased to 1 (sedentary) in order not to block barb city production.
 enable_city_capture_by_barbarians = false
