@@ -1,3 +1,4 @@
+- Barbarian city capture & production (experimental)
 - Can use charm flag to control PTW-like artillery targeting
 - Option to ignore king flag on defense, so kings aren't always last to defend in a stack
 - Harbor/airport city icons indicate unit effects not trade abilities
